fixed styling of logo - remove gap
created logo absolute

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,9 +5,10 @@
 
 /* ** logo ** */
 .custom-logo-link {
-    width:100px;
-    height:100px;
-    padding:20px;
+    position: absolute;
+    width:120px;
+    height:120px;
+    padding:10px 20px;
 }
 
 /* ** header page ** */
@@ -23,6 +24,7 @@
 
 .header-page .header {
     min-height: 600px;
+    height:100vh;
     width: auto;
     display: flex !important;
     flex-direction: column;
@@ -32,7 +34,6 @@
     background-position: center;
     background-position: center;
     background-repeat: no-repeat;
-
 }
 
 h1 {
